--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
 services:
   postgres:
-    build:
-      context: ./postgres
-      dockerfile: Dockerfile
+    image: postgres:15-alpine
     container_name: postgres
     ports:
       - "5432:5432"
     volumes:
       - ./volumes/postgres:/var/lib/postgresql/data
+      - ./init_postgres.sh:/docker-entrypoint-initdb.d/init.sh
     environment:
       - POSTGRES_USER=cardinal
       - POSTGRES_PASSWORD=cardinal
